# BadaczeMPI

./: .gitignore  CMakeLists.txt
src/: main.cpp  models.h  pch.h
src/enums/: MessageType.h  ProcessState.h  ResourceType.h
src/models/: Message.h  ProcessData.cpp  ProcessData.h  Settings.h
src/threads/: BaseThread.cpp  BaseThread.h  CommunicationThread.cpp  CommunicationThread.h  MainThread.cpp  MainThread.h
src/utility/: Functions.h  Log.cpp  Log.h
